edited css to fix flickering (again)

--- a/web.css
+++ b/web.css
@@ -1,7 +1,7 @@
 /* made by Nayan Patel 2022*/
 
 header{
-    background-size: cover;
+    /* background-size: cover; */
     min-height: 75vh;
     
     display: block;
@@ -161,6 +161,7 @@ a #home{
 }
 html{
     scroll-behavior: smooth;
+    -webkit-transform:translate3d(0,0,0);
     
 }
 
